@@ -704,7 +704,7 @@ It is unusual for both keyword arguments and the
 this confusion does not arise.
 
 If the syntax \samp{**expression} appears in the function call,
-\samp{expression} must evaluate to a (subclass of) dictionary, the
+\samp{expression} must evaluate to a mapping, the
 contents of which are treated as additional keyword arguments.  In the
 case of a keyword appearing in both \samp{expression} and as an
 explicit keyword argument, a \exception{TypeError} exception is
